--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-include_path=0;/joomla-mod-wsasharelinkfb
+include_path=0;/joomla-mod-wsasharelinkfb\u00052;/joomla-cms
